fix(pagination): L3-4096 arrow buttons were too small (#369)

--- a/src/components/Pagination/_pagination.scss
+++ b/src/components/Pagination/_pagination.scss
@@ -8,6 +8,15 @@
 }
 
 .#{$px} {
+  &-icon-button.#{$px}__pagination-button {
+    @include media($breakpoint-md) {
+      > svg {
+        height: 1.75rem;
+        width: 1.75rem;
+      }
+    }
+  }
+
   &--inline-pagination__wrapper {
     select {
       @include pText($body-size2);
